<resources>
    <string name="app_name">Plan Capsule</string>
    <string name="application_logo">Application Logo</string>
    <string name="splash_text">나의 계획을 담다</string>
    <!-- Strings related to login -->
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nextStep">다음</string>
    <string name="realnameHint">이름 (실명)</string>
    <string name="identifier">아이디</string>
    <string name="identifierAndPassword">아이디와 비밀번호를</string>
    <string name="identifierAndPassword2">입력하세요</string>
    <string name="warnIdentifierAlreadyInUse">이미 사용중인 아이디입니다.</string>
    <string name="password">비밀번호</string>
    <string name="passwordCheck">비밀번호 확인</string>
    <string name="warnPasswordMismatch">비밀번호가 일치하지 않습니다.</string>
    <string name="register">회원가입</string>
    <string name="login">로그인</string>
    <string name="warnCheckIDOrPassword">아이디 혹은 비밀번호를 확인하세요.</string>
    <string name="titleOnboarding1">목표관리의 시작은</string>
    <string name="titleOnboarding2">플랜캡슐에서!</string>
    <string name="subtitleOnboarding1">환영합니다!</string>
    <string name="subtitleOnboarding2">회원가입을 통해 바로 시작하세요.</string>
    <string name="descriptionHint">자기소개</string>
    <string name="titleOnboardingSetProfile">프로필 등록</string>
    <string name="subtitleOnboardingSetTitle1">나만의 프로필을 보여주세요</string>
    <string name="subtitleOnboardingSetProfile2">원을 눌러서 프로필을 바꿀 수 있어요!</string>
    <string name="titleOnboardingStartTutorial">튜토리얼 시작하기</string>
    <string name="subtitleOnboardingStartTutorial1">조금 더 쉽게 사용해봐요</string>
    <string name="subtitleOnboardingStartTutorial2">플랜캡슐은 세워놓고 잊어버리기 쉬운 장기계획\n관리를 돕는 서비스입니다. 목표를 세우고 친구와\n공유하며 계획을
        달성하세요!
    </string>
    <string name="start">시작하기</string>
</resources>