<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.on_boarding.OnboardingSelectionFragment">


    <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titleOnboarding1"
            android:textSize="26sp"
            android:textFontWeight="800"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
    />

    <TextView
            android:id="@+id/textViewTitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titleOnboarding2"
            android:textSize="26sp"
            android:textFontWeight="800"
            app:layout_constraintTop_toBottomOf="@id/textViewTitle"
            app:layout_constraintStart_toStartOf="@id/textViewTitle"
    />

    <TextView
            android:id="@+id/textViewSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/subtitleOnboarding1"

            android:lineHeight="19sp"
            android:textSize="16sp"
            android:textColor="@color/sub_blue3"
            android:textFontWeight="600"

            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/textViewTitle2"
            app:layout_constraintStart_toStartOf="@id/textViewTitle2"
    />

    <TextView
            android:id="@+id/textViewDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtitleOnboarding2"
            android:textFontWeight="400"
            android:textColor="@color/black2"
            app:layout_constraintTop_toBottomOf="@id/textViewSubtitle"
            app:layout_constraintStart_toStartOf="@id/textViewSubtitle"

            android:layout_marginTop="4dp"
    />


    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textViewDescription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.35">

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonLogin"
                android:layout_width="140dp"
                android:layout_height="40dp"
                style="@style/ButtonDefault"

                android:text="@string/login"
                android:textSize="14sp"
                android:textColor="@color/black2"
                android:textFontWeight="700"
                android:lineHeight="17sp"

                android:layout_marginEnd="5dp"
        />

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonSignUp"
                android:layout_width="140dp"
                android:layout_height="40dp"
                style="@style/ButtonDefault"

                android:text="@string/register"
                android:textSize="14sp"
                android:textFontWeight="700"
                android:lineHeight="17sp"

                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"
        />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>