<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".ui.on_boarding.SetProfileFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titleOnboardingSetProfile"
            android:textSize="26sp"
            android:textFontWeight="800"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
    />

    <TextView
            android:id="@+id/textViewSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/subtitleOnboardingSetTitle1"

            android:lineHeight="19sp"
            android:textSize="16sp"
            android:textColor="@color/sub_blue3"
            android:textFontWeight="600"

            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/textViewTitle"
            app:layout_constraintStart_toStartOf="@id/textViewTitle"
    />

    <TextView
            android:id="@+id/textViewDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtitleOnboardingSetProfile2"
            android:textFontWeight="400"
            android:textColor="@color/black2"

            app:layout_constraintTop_toBottomOf="@id/textViewSubtitle"
            app:layout_constraintStart_toStartOf="@id/textViewSubtitle"
            android:layout_marginTop="4dp"
    />

    <ImageButton
            android:id="@+id/imageButtonProfile"
            android:layout_width="132dp"
            android:layout_height="132dp"

            android:src="@drawable/ic_profile_placeholder"
            android:background="#00FFFFFF"
            app:layout_constraintTop_toBottomOf="@id/textViewDescription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            android:layout_marginTop="40dp"
    />

    <EditText
            android:id="@+id/editTextRealName"

            android:layout_width="285dp"
            android:layout_height="40dp"
            android:background="@drawable/et_background"
            android:hint="@string/realnameHint"
            android:textSize="14sp"
            android:textFontWeight="500"

            android:inputType="text"
            android:importantForAutofill="no"

            app:layout_constraintTop_toBottomOf="@id/imageButtonProfile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp"
            android:paddingHorizontal="24dp"

            android:elevation="6dp"
    />

    <EditText
            android:id="@+id/editTextDescription"
            android:layout_width="285dp"
            android:layout_height="40dp"
            android:background="@drawable/et_background"
            android:hint="@string/descriptionHint"
            android:textSize="14sp"
            android:textFontWeight="500"

            android:inputType="text"
            android:importantForAutofill="no"


            app:layout_constraintTop_toBottomOf="@id/editTextRealName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            android:layout_marginTop="12dp"
            android:paddingHorizontal="24dp"

            android:elevation="6dp"

    />
    <Button
            android:id="@+id/btnNext"

            android:layout_width="328dp"
            android:layout_height="52dp"
            android:text="@string/nextStep"
            android:textSize="20sp"
            android:textColor="@color/white"

            style="@style/ButtonDefault"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"

            android:layout_marginBottom="70dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>