<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.on_boarding.StartTutorialFragment">
    <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titleOnboardingStartTutorial"
            android:textSize="26sp"
            android:textFontWeight="800"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
    />

    <TextView
            android:id="@+id/textViewSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/subtitleOnboardingStartTutorial1"

            android:lineHeight="19sp"
            android:textSize="16sp"
            android:textColor="@color/sub_blue3"
            android:textFontWeight="600"

            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/textViewTitle"
            app:layout_constraintStart_toStartOf="@id/textViewTitle"
    />

    <TextView
            android:id="@+id/textViewDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtitleOnboardingStartTutorial2"
            android:textFontWeight="400"
            android:textColor="@color/black2"

            android:lineHeight="17sp"
            app:layout_constraintTop_toBottomOf="@id/textViewSubtitle"
            app:layout_constraintStart_toStartOf="@id/textViewSubtitle"

            android:layout_marginTop="4dp"
    />

    <ImageView
            android:id="@+id/imageViewIcon"
            android:layout_width="93dp"
            android:layout_height="69dp"
            android:src="@drawable/ic_plancapsule_main_blue"

            android:scaleType="fitCenter"


            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewDescription"
            app:layout_constraintBottom_toTopOf="@+id/btnNext"/>

    <Button
            android:id="@+id/btnNext"
            android:text="@string/start"
            android:textSize="20sp"
            android:textColor="@color/white"

            style="@style/ButtonDefault"

            android:layout_width="match_parent"
            android:layout_height="52dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1.0" android:layout_marginBottom="70dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>