<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.on_boarding.LoginActivity">
    <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/identifierAndPassword"
            android:textSize="26sp"
            android:textFontWeight="800"
            android:textColor="@color/black1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="125dp"
    />

    <TextView
            android:id="@+id/textViewTitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/identifierAndPassword2"
            android:textSize="26sp"
            android:textFontWeight="800"
            android:textColor="@color/black1"
            app:layout_constraintTop_toBottomOf="@id/textViewTitle"
            app:layout_constraintStart_toStartOf="@id/textViewTitle"
    />

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/textViewTitle2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            android:layout_marginTop="65dp"
    >
        <TextView
                android:id="@+id/tvNickname"

                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/identifier"
                android:textFontWeight="600"
                android:textSize="17sp"

                android:layout_marginStart="16dp"

                app:layout_constraintStart_toStartOf="@+id/etIdentifier"
                app:layout_constraintTop_toTopOf="parent"/>

        <EditText
                android:id="@+id/etIdentifier"
                android:layout_width="match_parent"
                android:layout_height="40dp"

                android:autofillHints="no"
                android:inputType="text"

                android:layout_marginVertical="8dp"
                android:layout_marginHorizontal="16dp"
                android:background="@drawable/et_background"
                android:elevation="6dp"

                android:layout_marginTop="4dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvNickname"/>

        <TextView
                android:id="@+id/tvPassword"

                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/password"
                android:lineHeight="17sp"
                android:textFontWeight="600"
                android:textSize="17sp"

                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"

                app:layout_constraintTop_toBottomOf="@+id/etIdentifier"
                app:layout_constraintStart_toStartOf="@+id/etPassword"
        />
        <EditText
                android:id="@+id/etPassword"

                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:autofillHints="no"
                android:inputType="textPassword"

                android:layout_marginVertical="8dp"
                android:layout_marginHorizontal="16dp"
                android:background="@drawable/et_background"
                android:elevation="6dp"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@+id/tvPassword" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
        />
        <TextView
                android:id="@+id/tvWarnPassword"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:visibility="visible"
                android:textColor="#FF4F4F"
                android:text="@string/warnCheckIDOrPassword"
                android:textSize="12sp"

                android:layout_marginEnd="16dp"
                android:layout_marginTop="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etPassword"
        />
        <!-- TODO: 비밀번호 규칙 관련 경고 -->

    </androidx.constraintlayout.widget.ConstraintLayout>
    <Button
            android:id="@+id/btnNext"
            android:text="@string/login"
            android:textSize="20sp"
            android:textColor="@color/white"


            style="@style/ButtonDefault"

            android:layout_width="match_parent"
            android:layout_height="52dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"

            android:layout_marginBottom="170dp"
    />
</androidx.constraintlayout.widget.ConstraintLayout>
